# renku-gateway

./: .dockerignore  .flake8  .gitignore  .golangci.yaml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.rst  Dockerfile  Dockerfile.old  Dockerfile.revproxy  Dockerfile.traefik  Makefile  Pipfile  README.md  README.rst  apispec.yaml  chartpress.yaml  endpoints.json  github_deploy_key.enc  go.mod  go.sum  install_helm.sh  pyproject.toml  requirements.txt  run-telepresence.sh  run.py  setup.cfg  telepresence-configure.sh  telepresence-intercept.sh  test.json  travis-deploy.sh
.devcontainer/: .env_template  devcontainer.json  docker-compose.yaml  docker-compose.yml  generate_ulid_func.sql  renku.json
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: acceptance-tests.yaml  ci.yml  codeql-analysis.yml  golangci-lint.yml  tests.yml
.travis/: travis-deploy.sh  travis-functions.sh
api/: spec.yaml
app/: __init__.py  config.py  settings.py
app/auth/: __init__.py  cli_auth.py  core_auth.py  gitlab_auth.py  jupyterhub_auth.py  keycloak_auth.py  keycloak_gitlab_auth.py  notebook_auth.py  oauth_client.py  oauth_provider_app.py  oauth_redis.py  renku_auth.py  revproxy_auth.py  search_auth.py  utils.py  web.py
app/blueprints/: __init__.py  backend_services.py  gitlab.py  graph.py  jupyterhub.py  notebooks.py  webhooks.py
app/common/: oauth_provider_app.py  utils.py
app/controllers/: __init__.py  proxy.py
app/forward_auth/: cli.py  forward_auth.py  gitlab.py  notebooks.py  renku_core.py
docs/: diagram-draw-io.xml  opentelemetry-integration.md
helm-chart/: README.rst  chartpress.yaml  linting-values.yaml  minikube-values.yaml
keygen-test/: id_rsa
server/: requirements.txt
(+236 files in other folders)
