[tool.poetry]
name = "renku-gateway"
version = "0.18.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.7"
flask = "*"
flask-cors = "*"
flask-kvsession = "*"
gunicorn = {extras = ["gevent"], version = "*"}
oauthlib = "*"
pyjwt = "~=2.4.0"
redis = "*"
requests = "*"
requests-oauthlib = "*"
responses = "*"
sentry-sdk = {extras = ["flask"], version = "*"}
sparqlwrapper = "*"
werkzeug = "*"
cryptography = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
nose = "*"
responses = "*"
debugpy = "*"
typing-extensions = "*"
chartpress = "*"
pytoml = "*"
black = "==22.3.0"
pytest-black = "*"
fakeredis = "*"
flake8 = "*"
pytest-flake8 = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
