[tool.poetry]
name = "renku-gateway"
version = "0.23.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = "*"
flask-cors = "*"
flask-kvsession = "*"
gunicorn = "*"
oauthlib = "*"
pyjwt = "^2.8.0"
redis = "*"
requests = "*"
requests-oauthlib = "*"
responses = "*"
sentry-sdk = {extras = ["flask"], version = "*"}
sparqlwrapper = "*"
werkzeug = "*"
cryptography = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
nose = "*"
responses = "*"
debugpy = "*"
typing-extensions = "*"
chartpress = "*"
pytoml = "*"
black = "*"
pytest-black = "*"
fakeredis = "*"
flake8 = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
